新增实时心率交互部分逻辑； 新增webview用户信息写入localstorage； 修复部分已知问题；